gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail253.d
version https://git-lfs.github.com/spec/v1
oid sha256:99d23a99f195de3e9d0d01b683d5918859f258696a340fd83c6538e54e73f702
size 555
